--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="static/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="circle"></div>
@@ -32,7 +32,7 @@
           </div>
         </div>
         <div class="navbar-menu__small-device">
-          <img src="static/images/bars.png" alt="Bars" />
+          <img src="images/bars.png" alt="Bars" />
         </div>
       </div>
       <div class="hero">
@@ -57,18 +57,18 @@
           <button class="order-now">Explore Now</button>
           <div class="social-media">
             <a href="#">
-              <img src="static/images/facebook.png" alt="Facebook" />
+              <img src="images/facebook.png" alt="Facebook" />
             </a>
             <a href="#">
-                <img src="static/images/instagram.png" alt="Instagram" />
+                <img src="images/instagram.png" alt="Instagram" />
               </a>
             <a href="#">
-                <img src="static/images/pinterest.png" alt="Facebook" />
+                <img src="images/pinterest.png" alt="Facebook" />
               </a>
           </div>
         </div>
         <div class="hero__image">
-          <img src="static/images/shoe-home.png" alt="Starbucks drinks" />
+          <img src="images/shoe-home.png" alt="Starbucks drinks" />
         </div>
       </div>
     </div>
